# git-mcp-server-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
benches/: benchmark.rs  memory_bench.sh
examples/: bench_quick.rs
src/: lib.rs  main.rs  server.rs
src/config/: mod.rs
src/error/: mod.rs
src/git/: executor.rs  mod.rs
src/tools/: advanced.rs  analysis.rs  branching.rs  history.rs  mod.rs  remote.rs  repo.rs  staging.rs
tests/: integration_test.rs
